--- a/src/app/asterios/main-menu/content/select-server/select-server.component.html
+++ b/src/app/asterios/main-menu/content/select-server/select-server.component.html
@@ -1,2 +1,5 @@
-<p>select-server works!</p>
-<div class="s">sssssssssssssss</div>
+<div class="content-wrap">
+    <iframe id="frame" #frame src="https://asterios.tm/index.php?cmd=rss&wnd=none&serv=0">
+    </iframe>
+    <div>{{a}}</div>
+</div>
