--- a/src/app/asterios/main-menu/main-menu.component.html
+++ b/src/app/asterios/main-menu/main-menu.component.html
@@ -1,4 +1,5 @@
 <div class="main-menu_wrap">
     <app-header></app-header>
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
 </div>
