--- a/src/app/asterios/main-menu/content/menu/menu.component.scss
+++ b/src/app/asterios/main-menu/content/menu/menu.component.scss
@@ -2,15 +2,69 @@
 @import "../../../../../assets/mixins.scss";
 
 .menu-wrap {
-    width: calc(100% - 300px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: calc(100% - 70px);
+    height: calc(100% - 190px);
     min-width: 300px;
-    height: 60%;
-    background-color: chartreuse;
     margin-top: 50px;
     margin-left: 35px;
+    border-radius: 10px;
+    background-color: rgb(245, 245, 245);
+    box-shadow: inset 6px 6px 6px rgb(154 147 140 / 80%), 1px 1px 5px rgba(255, 255, 255, 1);
 
     @include _max-440 {
+        width: calc(100% - 20px);
+        height: calc(100% - 75px);
         margin-left: 10px;
         margin-top: 15px;
+    }
+}
+
+.menu {
+    @include width-height(360px, 250px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    background-color: white;
+
+    &__title {
+        font-family: 'Jost', sans-serif;
+        font-size: 20px;
+        margin-top: 60px;
+    }
+
+    &__buttons {
+        width: 85%;
+        display: flex;
+        margin-top: 45px;
+        justify-content: space-around;
+
+        @include _max-440 {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+            height: 150px;
+        }
+    }
+
+    @include _max-440 {
+        @include width-height(230px, 300px);
+    }
+}
+
+.button {
+    @include width-height(80px, 25px);
+    @include button-color();
+
+    &:disabled {
+        background: rgb(219, 219, 219);
+        border: none;
+        cursor: auto;
+        color: rgb(133, 133, 133);
     }
 }
