--- a/src/app/asterios/main-menu/content/select-server/select-server.component.scss
+++ b/src/app/asterios/main-menu/content/select-server/select-server.component.scss
@@ -1,7 +1,23 @@
-p { 
-    color: white;
-}
+@import "../../../../../styles.scss";
+@import "../../../../../assets/mixins.scss";
 
-.s {
-    color: white;
+.content-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: calc(100% - 70px);
+    height: calc(100% - 190px);
+    min-width: 300px;
+    margin-top: 50px;
+    margin-left: 35px;
+    border-radius: 10px;
+    background-color: rgb(245, 245, 245);
+    box-shadow: inset 6px 6px 6px rgb(154 147 140 / 80%), 1px 1px 5px rgba(255, 255, 255, 1);
+
+    @include _max-440 {
+        width: calc(100% - 20px);
+        height: calc(100% - 75px);
+        margin-left: 10px;
+        margin-top: 15px;
+    }
 }
