--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -8,3 +8,20 @@
         @content;
     }
 }
+
+@mixin button-color() {
+    color: white;
+    background: linear-gradient(to bottom, black,rgb(59, 59, 59));
+    border: 0.5px solid black;
+    border-radius: 5px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 4px 10px rgba(0,0,0,0.22);
+    cursor: pointer;
+
+    &:hover {
+        background: linear-gradient(to bottom, rgb(24, 24, 24),rgb(88, 88, 88));
+    }
+
+    &:active {
+        background: linear-gradient(to bottom, rgb(58, 58, 58),rgb(110, 110, 110));
+    }
+}
