--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import "../src/assets/mixins.scss";
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@500&family=Oswald:wght@200&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@500&family=Jost:wght@300&family=Oswald:wght@200&family=Roboto&display=swap');
 
 html, body { 
     @include width-height(100%, 100%);
